# finance-app

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  s  sync.sh  test.py
.github/workflows/: sync.yml
backend/: celerybeat-schedule  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/api/: models.py  serializer.py  tasks.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_monthly_news_index_alter_news_date.py  0003_news_analysis.py
backend/mydjangoapp/: asgi.py  celery.py  settings.py  urls.py
docker/apache/: Dockerfile
docker/django/: Dockerfile
docker/next/: Dockerfile
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: analysis.js  api.js  chatgpt.js  data.js  globals.css  infomation.js  layout.js  news.js  page.js  stats.js
mydjangoapp/: Dockerfile  celerybeat-schedule  db.sqlite3  docker-compose.yml  pyproject.toml
mydjangoapp/api/: models.py  serializer.py  tasks.py  urls.py  views.py
mydjangoapp/mydjangoapp/: celery.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
